Ajout de la recherche dans les contacts. Conversion française du projet.

--- a/ETSMobile/Info.plist
+++ b/ETSMobile/Info.plist
@@ -7,7 +7,7 @@
 	<key>ApplETSUsername</key>
 	<string>${ApplETSUsername}</string>
 	<key>CFBundleDevelopmentRegion</key>
-	<string>en</string>
+	<string>fr_CA</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
