Correction du bug d'affichage des résultats. Correction du bug des actualités et horaire universitaire invisible. Correction du crash occasionnel lors de l'ouverture de l'horaire universitaire. Ajout de la radio dans le Control Center. Mise à jour Mint Splunk.

--- a/ETSMobile/ETSAPICoreDataMapping.plist
+++ b/ETSMobile/ETSAPICoreDataMapping.plist
@@ -205,6 +205,8 @@
 	<dict>
 		<key>session</key>
 		<string>session</string>
+		<key>id</key>
+		<string>id</string>
 		<key>acronym</key>
 		<string>sigle</string>
 		<key>credits</key>
