--- a/ETSMobile/ETSMobile-Info.plist
+++ b/ETSMobile/ETSMobile-Info.plist
@@ -45,7 +45,7 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>SupportKitApiKey</key>
-	<string>${SupportKitApiKey}</string>
+	<string>${SUPPORTKIT_API_KEY}</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
