--- a/ETSMobile/Info.plist
+++ b/ETSMobile/Info.plist
@@ -2,10 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>ApplETSUsername</key>
-	<string>${ApplETSUsername}</string>
 	<key>ApplETSPassword</key>
 	<string>${ApplETSPassword}</string>
+	<key>ApplETSUsername</key>
+	<string>${ApplETSUsername}</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>fr_CA</string>
 	<key>CFBundleExecutable</key>
@@ -40,6 +40,8 @@
 	</dict>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>SupportKitApiKey</key>
+	<string>${SUPPORTKIT_API_KEY}</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
