Mise à jour de la documentation README pour Cocoapods

--- a/ETSMobile/ETSMobile-Info.plist
+++ b/ETSMobile/ETSMobile-Info.plist
@@ -84,6 +84,11 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
-	<false/>
+    <false/><key>NSAppTransportSecurity</key>
+    <dict>
+        <!--Include to allow all connections (DANGER)-->
+        <key>NSAllowsArbitraryLoads</key>
+        <true/>
+    </dict>
 </dict>
 </plist>
