--- a/ETSMobile/ETSMobile-Info.plist
+++ b/ETSMobile/ETSMobile-Info.plist
@@ -15,7 +15,7 @@
 	<key>CFBundleIcons~ipad</key>
 	<dict/>
 	<key>CFBundleIdentifier</key>
-	<string>ca.etsmtl.applets.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -51,6 +51,25 @@
 	</dict>
 	<key>SupportKitApiKey</key>
 	<string>${SUPPORTKIT_API_KEY}</string>
+	<key>UIApplicationShortcutItems</key>
+	<array>
+		<dict>
+			<key>UIApplicationShortcutItemIconFile</key>
+			<string>ico_notes</string>
+			<key>UIApplicationShortcutItemTitle</key>
+			<string>Notes</string>
+			<key>UIApplicationShortcutItemType</key>
+			<string>com.etsmobile.opennotes</string>
+		</dict>
+		<dict>
+			<key>UIApplicationShortcutItemIconFile</key>
+			<string>Calendar</string>
+			<key>UIApplicationShortcutItemTitle</key>
+			<string>Horaire</string>
+			<key>UIApplicationShortcutItemType</key>
+			<string>com.etsmobile.opencalendar</string>
+		</dict>
+	</array>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
@@ -94,24 +113,5 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-	<key>UIApplicationShortcutItems</key>
-	<array>
-		<dict>
-			<key>UIApplicationShortcutItemIconFile</key>
-			<string>ico_notes</string>
-			<key>UIApplicationShortcutItemTitle</key>
-			<string>Notes</string>
-			<key>UIApplicationShortcutItemType</key>
-			<string>com.etsmobile.opennotes</string>
-		</dict>
-		<dict>
-            <key>UIApplicationShortcutItemIconFile</key>
-            <string>Calendar</string>
-			<key>UIApplicationShortcutItemTitle</key>
-			<string>Horaire</string>
-			<key>UIApplicationShortcutItemType</key>
-			<string>com.etsmobile.opencalendar</string>
-		</dict>
-	</array>
 </dict>
 </plist>
