--- a/ETSMobile/ETSMobile-Info.plist
+++ b/ETSMobile/ETSMobile-Info.plist
@@ -7,7 +7,7 @@
 	<key>ApplETSUsername</key>
 	<string>${ApplETSUsername}</string>
 	<key>CFBundleDevelopmentRegion</key>
-	<string>fr_CA</string>
+	<string>fr</string>
 	<key>CFBundleDisplayName</key>
 	<string>${PRODUCT_NAME}</string>
 	<key>CFBundleExecutable</key>
