ajout Sponsors requêtes API

--- a/ETSMobile/ETSAPICoreDataMapping.plist
+++ b/ETSMobile/ETSAPICoreDataMapping.plist
@@ -2,19 +2,30 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>Consommation</key>
-    <dict>
-        <key>id</key>
-        <string>id</string>
-        <key>date</key>
-        <string>date</string>
-        <key>download</key>
-        <string>download</string>
-        <key>idChambre</key>
-        <string>idChambre</string>
-        <key>upload</key>
-        <string>upload</string>
-    </dict>
+	<key>Sponsors</key>
+	<dict>
+		<key>image_url</key>
+		<string>image_url</string>
+		<key>index</key>
+		<string>index</string>
+		<key>name</key>
+		<string>name</string>
+		<key>url</key>
+		<string>url</string>
+	</dict>
+	<key>Consommation</key>
+	<dict>
+		<key>id</key>
+		<string>id</string>
+		<key>date</key>
+		<string>date</string>
+		<key>download</key>
+		<string>download</string>
+		<key>idChambre</key>
+		<string>idChambre</string>
+		<key>upload</key>
+		<string>upload</string>
+	</dict>
 	<key>NewsSource</key>
 	<dict>
 		<key>enabled</key>
