Added cognitoPoolId App no longer crashing on start, endpoint and userData successfully sent to AWS when the user click "ok" to receive notifications.

--- a/ETSMobile/ETSMobile-Info.plist
+++ b/ETSMobile/ETSMobile-Info.plist
@@ -152,7 +152,7 @@
                 <key>Default</key>
                 <dict>
                     <key>PoolId</key>
-                    <string>YourCognitoIdentityPoolId</string>
+                    <string>us-east-1:f7b54ec0-4106-47dd-b6e8-ecd60aac78eb</string>
                     <key>Region</key>
                     <string>USEast1</string>
                 </dict>
